# ros2-qt6-system

./: .gitignore  README.md  no_shm.xml  pixi.toml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: system_params.yaml
src/bringup/launch/: main_bringup.launch - 副本.py  main_bringup.launch.py
src/control_node/: CMakeLists.txt  export_code.ps1  package.xml
src/control_node/config/: control_node_config.yaml  settings_params.yaml
src/control_node/include/control_node/: control_logic.hpp  control_node.hpp  control_node_constants.hpp  control_node_context.hpp  hardware_coordinator.hpp  i_controller_strategy.hpp  i_hardware_coordinator.hpp  i_persistence_coordinator.hpp  persistence_coordinator.hpp  state_manager.hpp
src/control_node/include/control_node/strategies/: auto_current_strategy.hpp  manual_strategy.hpp
src/control_node/launch/: run_control_node.launch.py
src/control_node/src/: control_logic.cpp  control_node.cpp  hardware_coordinator.cpp  main.cpp  persistence_coordinator.cpp  state_manager.cpp
src/control_node/src/strategies/: auto_current_strategy.cpp  manual_strategy.cpp
src/hardware_node/: .gitignore  CMakeLists.txt  export_code.ps1  package.xml
src/hardware_node/config/: hardware_node_config.yaml
src/hardware_node/include/hardware_node/: hardware_node.hpp  hardware_node_constants.hpp  i_hardware_driver.hpp  mock_device.hpp  mock_hardware_driver.hpp  tcp_hardware_driver.hpp
src/hardware_node/launch/: run_hardware_node.launch.py
src/hardware_node/src/: hardware_node.cpp  main.cpp  mock_device.cpp  mock_hardware_driver.cpp  tcp_hardware_driver.cpp
src/qt_node/: CMakeLists.txt  export_code.ps1  package.xml
src/qt_node/config/: qt_node_config.yaml
src/qt_node/include/qt_node/: qt_node_constants.hpp  qt_ros_node.hpp  ros_proxy.hpp
src/qt_node/include/qt_node/data_types/: circuit_settings_data.hpp  data_types.hpp  loop_settings_data.hpp  regulator_settings_data.hpp  sample_settings_data.hpp  system_settings_data.hpp  voltage_regulator_settings_data.hpp
src/qt_node/launch/: run_qt_node.launch.py
src/qt_node/qml/: Main.qml  MainForm.ui.qml  Theme.qml
src/qt_node/qml/components/: ActionButtonForm.ui.qml  CircuitStatus.qml  CircuitStatusForm.ui.qml  ContinuousActionButton.qml  InputBlocker.qml  LoopStatus.qml  LoopStatusForm.ui.qml  MessagePopup.qml  ModeControl.qml  ModeControlForm.ui.qml  RegulatorControl.qml  RegulatorControlForm.ui.qml  SettingInput.qml  SettingSwitch.qml  SettingTextArea.qml  SettingsGroup.qml  StartStopPanel.qml  StyledButton.qml  StyledButtonForm.ui.qml  ToggleActionButton.qml  ValueAndUnit.ui.qml
src/qt_node/qml/pages/: CircuitSettingsPage.qml  CircuitSettingsPageForm.ui.qml  HistoryPage.qml  HistoryPageForm.ui.qml  SystemSettingsPage.qml  SystemSettingsPageForm.ui.qml  TemperatureMonitorPage.qml  TemperatureMonitorPageForm.ui.qml  TestDataPage.qml
src/qt_node/src/: main.cpp  qt_ros_node.cpp  ros_proxy.cpp
src/qt_node/src/data_types/: circuit_settings_data.cpp  loop_settings_data.cpp  regulator_settings_data.cpp  sample_settings_data.cpp  system_settings_data.cpp  voltage_regulator_settings_data.cpp
src/record_node/: CMakeLists.txt  export_code.ps1  package.xml
src/record_node/config/: record_node_config.yaml
src/record_node/include/record_node/: database_manager.hpp  record_node.hpp  record_node_constants.hpp
src/record_node/launch/: run_record_node.launch.py
src/record_node/src/: database_manager.cpp  main.cpp  record_node.cpp
src/ros2_interfaces/: .gitignore  CMakeLists.txt  export_code.ps1  package.xml
src/ros2_interfaces/msg/: CircuitCommand.msg  CircuitSettings.msg  CircuitStatus.msg  DataRecord.msg  HardwareCircuitSettings.msg  HardwareCircuitStatus.msg  HardwareLoopSettings.msg  HardwareLoopStatus.msg  LoopSettings.msg  LoopStatus.msg  RegulatorOperationCommand.msg  RegulatorSettings.msg  RegulatorStatus.msg  SampleSettings.msg  SystemSettings.msg  SystemStatus.msg  VoltageRegulatorCommand.msg  VoltageRegulatorSettings.msg  VoltageRegulatorStatus.msg
src/ros2_interfaces/srv/: CircuitBreakerCommand.srv  CircuitModeCommand.srv  GetCircuitSettings.srv  GetDataRecords.srv  GetRegulatorSettings.srv  GetSystemSettings.srv  QueryDataRecords.srv  RegulatorBreakerCommand.srv  SetCircuitSettings.srv  SetHardwareCircuitControlMode.srv  SetHardwareCircuitControlSource.srv  SetHardwareCircuitSettings.srv  SetRegulatorSettings.srv  SetSystemSettings.srv
