<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>record_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ginger830512@163.com">PS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- 声明对 sqlite3 的依赖 -->
  <build_depend>sqlite3</build_depend>
  <exec_depend>sqlite3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
